--- a/src/components/UI/componentCss/navigation.css
+++ b/src/components/UI/componentCss/navigation.css
@@ -1,13 +1,15 @@
 /* Navigation Styles */
 .custom-navbar {
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important;
+  /* background: transprant !important; */
   backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding: 1rem 0;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   z-index: 100;
 }
-
+.navbar{ 
+  background-color: transparent !important;
+}
 .brand {
   font-size: 1.5rem;
   font-weight: bold;
